versioned_docs/version-4.1.0/内置函数/流程自定义函数.md

import useBaseUrl from '@docusaurus/useBaseUrl';

### ModifyActor

* 函数原型：
  * ModifyActor(“_activityEntityName”,”_taskGroupPropertyName”,”_updateType”)
* 函数描述：
  * 修改业务流程中指定活动实例参与者人员，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * _activityEntityName：字符串类型，活动实例名。
  * _taskGroupPropertyName：字符串类型，作业组属性名，作业组属性类型可以为字符串、列表、可输入列表或多选列表，作业组属性的值（如果为列表，则为对应的显示值）即为指定的参与者人员的登录名或用户名。作业组属性的值可以包含多个人员，人员之间用逗号分隔。
  * _updateType：字符串类型，更新类型，为”Update”或”Add”，其中”Update”表示更新，会删除以前的参与者人员和参与者角色，”Add”表示增加，以前的参与者人员和参与者角色仍然有效。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * ModifyActor("设备维护员执行","设备维护员执行人","Update")
  * ModifyActor("设备维护员执行","设备维护员执行人","Add")

### ModifyActorOrgUnit

* 函数原型：
  * ModifyActorOrgUnit(“_activityEntityName”,”_taskGroupPropertyName”,”_updateType”)
* 函数描述：
  * 修改业务流程中指定活动实例参与者角色的组织单元，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * _activityEntityName：字符串类型，活动实例名。
  * _taskGroupPropertyName：字符串类型，作业组属性名，作业组属性类型可以为字符串、列表或可输入列表，作业组属性的值（如果为列表，则为对应的显示值）即为指定的参与者角色的组织单元名。
  * _updateType：字符串类型，更新类型，为”Update”或”Add”，其中”Update”表示更新，会删除以前的参与者人员，”Add”表示增加，以前的参与者人员仍然有效。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * ModifyActorOrgUnit("设备维护员执行","甲班","Update")
  * ModifyActorOrgUnit("设备维护员执行","甲班","Add")

### ModifyActorBD

* 函数原型：
  * ModifyActorBD(“_activityEntityName”,”_bdClassName”,”_taskGroupPropertyName”,”_updateType”)
* 函数描述：
  * 修改业务流程中指定活动实例参与者角色的业务范畴，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * _activityEntityName：字符串类型，活动实例名。
  * _bdClassName：字符串类型，业务范畴类别名。
  * _taskGroupPropertyName：字符串类型，作业组属性名，作业组属性类型可以为字符串、列表或可输入列表，作业组属性的值（如果为列表，则为对应的显示值）即为指定的参与者角色的组织单元名。
  * _updateType：字符串类型，更新类型，为”Update”或”Add”，其中”Update”表示更新，会删除以前的参与者人员，”Add”表示增加，以前的参与者人员仍然有效。
* 注意：
  * 作业组属性名和业务范畴类别名参数不验证正确与否。
* 例子：
  * ModifyActorBD ("审核2","动火范畴","作业性质","Update ")
  * ModifyActorBD ("审核","动火等级","作业等级"," Add")

### ReleaseTaskJob

* 函数原型：
  * ReleaseTaskJob (_tgPropertyNameOfTs,_tgPropertyNameOfAsset)
* 函数描述：
  * 释放作业组下作业任务，这些作业任务将变成待计划状态，可以在业务流程的业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * _tgPropertyNameOfTs：字符串类型，作业组属性名，作业组属性类型可以为字符串，作业组属性的值即为指定的作业规范名。可以为空，表示不按照此参数过滤。
  * _tgPropertyNameOfAsset：字符串类型，作业组属性名，作业组属性类型可以为字符串，作业组属性的值即为指定的资产名。可以为空，表示不按照此参数过滤。
* 注意：
作业组属性名参数不验证正确与否。
* 例子：
  * 释放作业组下所有作业任务：ReleaseTaskJob ()
  * 释放作业组下由作业组属性“属性1”的值指定的作业规范名的作业任务：ReleaseTaskJob (属性1)
  * 释放作业组下由作业组属性“属性2”的值指定的资产名的作业任务：ReleaseTaskJob (,属性2)
  * 释放作业组下由作业组属性“属性1”的值指定的作业规范名且由作业组属性“属性2”的值指定的资产名的作业任务：ReleaseTaskJob (属性1,属性2)

### ReleaseMultiTaskJobs

* 函数原型：
  * ReleaseMultiTaskJobs (_tgPropertyName)
* 函数描述：
  * 释放作业组下指定作业任务，这些作业任务将变成待计划状态，可以在业务流程的业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * _tgPropertyName：字符串类型，作业组属性名，作业组属性类型为字符串，作业组属性的值为删除作业任务的条件，不可以为空。格式为如下：
  [{“TSName”:”TsName1”,” AssetName”:”AsstName1”},{“TSName”:”TsName1”,” AssetName”:”AsstName1”}]
* 其中各字段的含义如下：
  * TSName：字符串类型，作业规范名称。
  * AssetName：字符串类型，资产名称。
* 注意：
  * 删除作业任务的条件为一个JSON格式的对象数组，对象之间的条件为或的关系，对象内为与的关系。如果某个对象内的某个字段不存在或为空字符串，则此字段不作为条件。如果某个对象内没有任何字段或所有字段都为空，则释放该作业组下的所有作业任务。
* 例子：
  * 释放作业组下由作业组属性“属性1”的值指定的条件作业任务：
    ReleaseMultiTaskJobs("属性1");

### DeleteTaskJob

* 函数原型：
  * DeleteTaskJob ()
* 函数描述：
  * 删除作业组下所有作业任务，可以在业务流程的业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：无参数。
* 注意：无。
* 例子：
  * 删除作业组下所有作业任务：DeleteTaskJob ()

### ModifyAssetProperty

* 函数原型：
  * ModifyAssetProperty("_tgPropertyNameForAssetFullName","_tgPropertyNameForAssetPropertyName","_tgPropertyNameForAssetValue")
* 函数描述：
  * 修改资产属性的值，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * _tgPropertyNameForAssetFullName：字符串类型，作业组属性名，作业组属性类型为字符串，作业组属性的值即为指定的全路径资产名，作业组属性的值形如“发电厂.1#机组.锅炉”。
  * _tgPropertyNameForAssetPropertyName：字符串类型，作业组属性名，作业组属性类型为字符串，作业组属性的值即为指定的资产属性名。
  * _tgPropertyNameForAssetValue：字符串类型，作业组属性名，作业组属性的值即为指定的资产属性值。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * ModifyAssetProperty ("资产名","资产属性名","资产属性值")

### ModifyAssetInherentProperty

* 函数原型：
  * ModifyAssetInherentProperty("_tgTaskGroupPropertyValue")
* 函数描述：
  * 修改资产固有属性的值，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * _tgTaskGroupPropertyValue：字符串类型，作业组属性名,作业组属性类型为字符串，作业组属性的值即为需修改资产的id，固有属性名，修改后值，作业组属性的值形如“_assetID,_InherentPropertyName,_newValue”。
  * 作业组属性值中参数说明：_assetID为资产ID，_ InherentPropertyName为固有属性名（支持”NAME”（资产名）,” MARK”（资产号）），_newValue为修改后值。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * ModifyAssetInherentProperty ("资产名修改")

### OperatingInventory

* 函数原型：
  * OperatingInventory ("_tpNameFrom","_tpNameTo","_tpOperat","_tpdataName")
* 函数描述：
  * 根据_tpOperat的值进行库存操作，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * _tpNameFrom：字符串类型，作业组属性名，其值为来源库存的存储区域名称(必须保证存储区域名在系统中唯一)。
  * _tpNameTo：字符串类型，作业组属性名，其值为目标库存的存储区域名称(必须保证存储区域名在系统中唯一)。
  * _tpOperat：字符串类型，对库存的操作类型共七个类型。
    * Receive：新入库，_tpNameFrom可为空，该作业组属性值可以为空，_tpNameTo下物料数量增加。
    * Return：返库，_tpNameFrom可为空，该作业组属性值可以为空，_tpNameTo下物料数量增加。
    * Issue：领料，_tpNameTo可为空，该作业组属性值可以为空，_ tpNameFrom下物料数量减少。
    * Dispose：报废，_tpNameTo可为空，该作业组属性值可以为空，_ tpNameFrom下物料数量减少。
    * Ship：发货，_tpNameTo可为空，该作业组属性值可以为空，_ tpNameFrom下物料数量减少。
    * Consume：消耗，_tpNameTo可为空，该作业组属性值可以为空，_ tpNameFrom下物料数量减少。
    * Move：移库 _tpNameFrom,_tpNameTo都不为空，作业组属性也都不可为空，_tpNameFrom下物料数量减少，_tpNameTo下物料数量增加。
    * Check: 盘库，_tpNameFrom可为空，该作业组属性值可以为空，_tpNameTo下物料数量更新，原有的项信息会清空。
    * Init: 初始化库，_tpNameFrom可为空，该作业组属性值可以为空，_tpNameTo下物料数量初始化，原有的项信息会清空。
    * _tpdata：字符串类型，作业组属性名，该作业组属性格式为json字符串，其需要有“物料号”（必须），“数量”（必须），“供应商”（该物料的供应商，组织单元名，非必须，），“项列表”（非必须，如果需要管理到每一个物料上，则需要该项，该项是每个物料的项信息，包括物料的项编码（必须），生产时间，供应商（当前物料的供应商，供应商如果存在，则更新库存项中的供应商））四个字段。如果_tpdata的数据是多条，则进行多条库存操作。按照操作类型_tpOperat对来源库与目标库进行操作。

* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * OperatingInventory('来源库','目标库','操作类型','数据');
* 数据的格式样例如下图：
  
  <img alt=" " src={useBaseUrl('docimg/hanshu1.png')} />

* 数据的值样例如下图：

  <img alt=" " src={useBaseUrl('docimg/hanshu2.png')} />

* 项列表的格式样例如下图：

  <img alt=" " src={useBaseUrl('docimg/hanshu3.png')} />

* 列表的值样例如下图：

  <img alt=" " src={useBaseUrl('docimg/hanshu4.png')} />

### OperatingInventoryByJsonData

* 函数原型：
  * OperatingInventoryByJsonData('tgPropertyName')
* 函数描述：
  * 终端操作常用库存，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：json字符串类型，格式为库存操作，作业组属性名。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * OperatingInventoryByJsonData('入库')

### InventoryOperation

* 函数原型：
  * InventoryOperation ("_tgAssetNameFrom","_tgAssetNameTo","_tgSubAssetName","_tgNumValue","_OperationType","_AssetPropertyName ","_isWriteLog")
* 函数描述：
  * 根据_OperationType的值更新资产属性值，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * _tgAssetNameFrom：字符串类型，来源资产名(必须系统中没用重名资产)。
  * _tgAssetNameTo：字符串类型，目标资产名(必须系统中没用重名资产)。
  * _tgSubAssetName：字符串类型，子资产名。来源资产与目标资产同时都有该名的子资产，该子资产下必须有属性_AssetPropertyName且属性数据类型为int。
  * _tgNumValue：int类型，属性_AssetPropertyName的修正值。
  * _OperationType：字符串类型，对资产的操作类型共七个类型。
  * receive新入库:操作1 (_tgAssetNameFrom可为空)
  * return返库: 操作1 (_tgAssetNameFrom可为空)
  * issue领料:操作2 (_tgAssetNameTo可为空)
  * dispose报废：操作2 (_tgAssetNameTo可为空)
  * ship发货：操作2  (_tgAssetNameTo可为空)
  * consume消耗：操作2  (_tgAssetNameTo可为空)
  * move移库：操作1，操作2 (tgAssetNameFrom,_tgAssetNameTo都不为空)

  * 操作1：_tgAssetNameTo下子资产_ tgSubAssetName属性_AssetPropertyName增加_tgNumValue。
  * 操作2: _tgAssetNameFrom下子资产_ tgSubAssetName属性_AssetPropertyName减少_tgNumValue。
  * _AssetPropertyName：tgSubAssetName的资产属性名，属性数据类型为int。
  * _isWriteLog：bool类型，是否记录日志，该参数允许为空，默认为false。该参数为真时，会在mongdb中生成本次操作的记录日志。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * InventoryOperation ("来源资产名","","子资产名","5", "receive","数量");
  * InventoryOperation ("","目标资产名","子资产名","5", "receive","数量");
  * InventoryOperation ("来源资产名","目标资产","资产名","5","receive","数量", "true");

### MultiInventoryOperation

* 函数原型：
  * MultiInventoryOperation("_tgPropertyName")
* 函数描述：
  * 根据OperationType的值更新多条资产属性值，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * _tgPropertyName为作业组属性，为json字符串，格式如下
    [{"tgAssetNameFrom":"","tgAssetNameTo":"","tgSubAssetName":"","tgNumValue":"","OperationType":"","AssetPropertyName":"","isWriteLog":""}]
  * tgAssetNameFrom：字符串类型，来源资产名(必须系统中没用重名资产)。
  * tgAssetNameTo：字符串类型，目标资产名(必须系统中没用重名资产)。
  * tgSubAssetName：字符串类型，子资产名。来源资产与目标资产同时都有该名的子资产，该子资产下必须有名为 AssetPropertyName属性且属性类型为int。
  * tgNumValue：int类型，属性AssetPropertyName的修正值。
  * OperationType：字符串类型，对资产的操作类型共七个类型。
  * receive新入库:操作1 (_tgAssetNameFrom可为空)
  * return返库: 操作1 (_tgAssetNameFrom可为空)
  * issue领料:操作2 (_tgAssetNameTo可为空)
  * dispose报废：操作2 (_tgAssetNameTo可为空)
  * ship发货：操作2  (_tgAssetNameTo可为空)
  * consume消耗：操作2  (_tgAssetNameTo可为空)
  * move移库：操作1，操作2 (tgAssetNameFrom,_tgAssetNameTo都不为空)
  * 操作1：_tgAssetNameTo下子资产_ tgSubAssetName属性AssetPropertyName增加_tgNumValue。
  * 操作2: _tgAssetNameFrom下子资产_ tgSubAssetName属性AssetPropertyName减少_tgNumValue。
  * AssetPropertyName：tgSubAssetName的资产属性名，属性数据类型为int。
  * isWriteLog：bool类型，是否记录日志，该参数允许为空，默认为false。该参数为true时，会在mongdb中生成本次操作的记录日志。

* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * MultiInventoryOperation("tgPropertyName ");

### WriteSystemLog

* 函数原型：
  * WriteSystemLog ("docName", "tgPropertyName")
* 函数描述：
  * 系统中记录日志，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * docName：字符串类型，记录日志文档名。
  * tgPropertyName：字符串类型，作业组属性名。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * WriteSystemLog ("CustomReport","日志参数");
    tgPropertyName格式为: {"No":"1","Name":"wk","Age":"22","Address":"bj"}。
    函数执行后，会在mongdb中生成本次操作的记录日志。

### AddObjectToAssetProperty

* 函数原型：
  * AddObjectToAssetProperty (“tgPropertyName”,” assetPropertyName”,”keyType”)
* 函数描述：
  * 把作业组属性中关键字添加到特定资产的资产属性值中，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名。
  * assetPropertyName：字符串类型，资产属性名。
  * keyType:字符串类型，关键字类型名。该参数缺省值为”例外名”,可没有但不能为空字符串。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * AddObjectToAssetProperty("作业组属性名","例外名",”例外名”);
    Eg:
    tgPropertyName格式为:[{资产ID: 6B412332-287C-4F2F-B480-A743A6C6DD4C ,例外名:测试}]。
    资产属性名:例外名。
    函数执行后,对应资产的资产属性【例外名】值为[{例外名:测试}]。

### RemoveObjectFromAssetProperty

* 函数原型：
  * RemoveObjectFromAssetProperty (“tgPropertyName”,” assetProprtyName”,”keyType”)
* 函数描述：
  * 把作业组属性中关键字从资产属性值中移去，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名。
  * assetProprtyName：字符串类型，资产属性名。
  * keyType:字符串类型，关键字类型名。该参数缺省值为”例外名”,可没有但不能为空字符串。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
* RemoveObjectFromAssetProperty ("作业组属性名","例外名",”例外名”);
  Eg:
  tgPropertyName格式为:[{资产ID: 6B412332-287C-4F2F-B480-A743A6C6DD4C ,例外名:测试}]。
  资产属性名:例外名。
  函数执行后,对应资产的资产属性【例外名】值中{例外名:测试}被删除。

### CreateTaskJob

* 函数原型：
  * CreateTaskJob (“tgPropertyName”,” tsName”)
* 函数描述：
  * 创建作业任务，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名，作业组属性值形如“[{"资产ID":"08F0EE0C-493E-4ABA-A8E9-A837688E10B8","资产名":"泵1","例外名":"泄露"},{"资产ID":"6B412332-287C-4F2F-B480-A743A6C6DD4C","资产名":"阀门1","例外名":"损坏"}]”
  * tsName：字符串类型，作业规范名，表示要创建的作业任务所属作业规范。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * CreateTaskJob("新增例外","维修规范")
    如果“新增例外”的值为“[{"资产ID":"08F0EE0C-493E-4ABA-A8E9-A837688E10B8","资产名":"泵1","例外名":"泄露"},{"资产ID":"6B412332-287C-4F2F-B480-A743A6C6DD4C","资产名":"阀门1","例外名":"损坏"}]”，则这个函数会创建如下两个作业任务：
    维修规范(泵1_泄露)，它管理的资产为泵1。
    维修规范(阀门1_损坏)，它管理的资产为阀门1。

### AutoCreateTaskJob

* 函数原型：
  * AutoCreateTaskJob (“tgPropertyName”)
* 函数描述：
  * 自动创建作业任务，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名，作业组属性值形如：
    [{"AssetID":"b7f719a3-7e9a-4d8b-9560-52f3640a39f4","StartTime":"2016-05-15","EndTime":"2016-06-14","TSName":"验定","TJName":"秤1_验定","IsDelete":true},
    {"AssetID":"1e240113-1deb-4485-8aff-0f3ece00a2a9","StartTime":"2015-11-29","EndTime":"2015-12-29","TSName":"验定","TJName":"秤2_验定","IsDelete":true}]
* 其中各字段的含义如下：
  * AssetID：字符串类型，资产ID。
  * StartTime：字符串类型，表示要创建的作业任务的起始时间。可选参数，默认为空。
  * EndTime：字符串类型，表示要创建的作业任务的截止时间。可选参数，默认为空。
  * TSName：字符串类型，作业规范名称。
  * TJName：字符串类型，表示要创建的作业任务的名称。可选参数，默认为“资产名_作业规范名”。
  * IsDelete：布尔类型，表示如果系统存在未计划的相同资产和作业规范的作业任务，是否需要删除。可选参数，默认为true。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * 在记录本次日期的作业项上配置无条件逻辑脚本：

```
var assetID = @MyTask.Asset;
var assetName = @MyTask.Asset.DisplayName;
var assetPre = @MyTask.Asset.验定周期.DisplayName;
var assetLastTime = @Me.Value;
var tsName = '验定';

var date = Common.ParseDatetimeFromString(assetLastTime);
var endTime = date.getTime() + assetPre * 24 * 60 * 60 * 1000;
var startTime = endTime - 30 * 24 * 60 * 60 * 1000;
var endTimeString = Common.FormatDateTimeByFormat('yyyy-MM-dd', new Date(endTime));
var startTimeString = Common.FormatDateTimeByFormat('yyyy-MM-dd', new Date(startTime));

var tgValue = ScriptEngine.Context.GetTaskGroupPropertyValue('验定资产信息');
var keyValue = assetName + '_' + tsName;
var existInTG = Common.Ex_IsExist(tgValue, 'TJName', keyValue);
if (!existInTG)
{
    var obj = { 'AssetID': assetID ,'StartTime': startTimeString ,'EndTime':endTimeString,'TSName':tsName,'TJName':keyValue,'IsDelete':true};
    var newTGValue = Common.Ex_AddObj(tgValue, obj);
    ScriptEngine.Context.SetTaskGroupPropertyValue('验定资产信息', newTGValue);
}
return true;
```

* 运行脚本后，tgPropertyName的值为:
  [{"AssetID":"b7f719a3-7e9a-4d8b-9560-52f3640a39f4","StartTime":"2016-05-15","EndTime":"2016-06-14","TSName":"验定","TJName":"秤1_验定","IsDelete":true}]
  AutoCreateTaskJob("验定资产信息")：流程中调用此函数，自动创建新的任务。

### CreateTaskGroupPlanByTaskItem

* 函数原型：
  * CreateTaskGroupPlanByTaskItem(“Category”,” ExceptionLevel”, ”tsName”, ”tgName” , “BelongOU”,“StartTimeAssetPropertyName”,“OffsetAssetPropertyName”,“Offset”,“Duration”,"IsCreate","UserTaskGroupPropertyName","GroupIDTaskGroupPropertyName”, "TaskItemIDTaskGroupPropertyName”,"RuntimeRelatedBDIDStringTaskGroupPropertyName","true",”项目名”)
* 函数描述：
  * 查看作业组中是否存在业务范畴和例外等级与Catagory和ExceptionLevel设定相等的作业项，如果有符合条件的作业项，为每个符合条件的作业项创建一个作业组实例，同时为该作业组实例添加一个作业。
* 作业组实例按照如下规则创建：
  * 按tgName指定的作业组模版、作业组名称为满足条件的作业项资产名+”-"+ 指定的作业组模版名。
  * 作业组描述为例外作业项名称+"-"+例外作业项值。
  * 按BelongOU指定的作业组所属组织单元。
  * 作业组的业务范畴为例外作业项的业务范畴。
  * 添加的作业：tsName指定的作业规范模版、资产为例外作业项的资产。名称为tsName +'('+资产名称 + '_' + 例外作业项名称+ ')' 。
  * StartTimeAssetPropertyName 指定基础时间
  * 作业组的计划开始时间为，基础时间 + 偏移量 + Offset 
  * 作业组的计划结束时间为，基础时间 + 偏移量 + Offset + Duration

  * 作业组的业务范畴为满足条件作业项的业务范畴
  * 业务流程的初始活动、业务活动后和条件逻辑活动完成事件中调用此函数。同一事件可以多次调用此函数，函数之间用分号隔开。
  * 创建作业组计划，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * Catagory：字符串类型，业务范畴的显示名，空为任何业务范畴。
  * ExceptionLevel：数值类型，例外等级，0到999，0为任何例外等级，不为空。
  * tsName：字符串类型，作业规范名，不为空。
  * tgName：字符串类型，作业组模版名，不为空。
  * BelongOU：字符串类型，创建的作业组所属组织单元名。当要创建的作业组没有多个组织单元时，此参数无效。当要创建的作业组有多个组织单元时：当参数不填，如果当前作业组所在组织单元在列表中，以当前作业组所在组织单元创建；如果当前作业组所在组织单元不在列表中，以缺省所属组织单元创建
  * StartTimeAssetPropertyName：字符串类型，作业资产的资产属性名，此资产属性为时间日期类型，为计算作业组计划开始时间的基础时间，如果此参数为空，基础时间为“现在”
  * OffsetAssetPropertyName：字符串类型，作业资产的资产属性名，此资产属性为数值类型，其值是计算计划开始时间的第一个偏移量，单位为小时，如果此参数为空，偏移量 = 0 ，不为空。
  * Offset：数值类型，计算计划开始时间的第二个偏移量，单位为小时，不为空。
  * Duration：数值类型，作业期限，单位为小时，不为空。
  * IsCreate：布尔类型，表示如果系统存在未执行的任务名称相同的任务，是否继续创建。可选参数， true为重复创建，false为不创建，不为空。
  * UserTaskGroupPropertyName:作业组属性名称，会将满足条件作业项的执行人更新到这个tsName的作业组属性里。可不填，不填则不更新。
  * GroupIDTaskGroupPropertyName:作业组属性名称，会将这个作业组的实例ID更新到tsName的作业组属性里。可不填，不填则不更新。
  * TaskItemIDTaskGroupPropertyName:作业组属性名称，会将这个作业项的实例ID更新到tsName的作业组属性里。可不填，不填则不更新。
  * RuntimeRelatedBDIDStringTaskGroupPropertyName：作业组属性名称，将符合条件的作业项的业务范畴全程更新到这。可不填，不填则不更新。格式为业务范畴类别1.业务范畴a,业务范畴类别2.业务范畴b
  * IsOnlySave：是否只保存，bool值，只有是true时，作业组计划状态为保存，不发布。可不填，不填则发布。
  * ServiceProjectName：项目名称，有该参数时必须有IsOnlySave参数（顺序不可错），创建的作业组所属项目名。可不填，不填或者项目不存在时，创建的作业组属于原作业组所属项目。

* 注意：
  * 各参数不验证正确与否，如果参数错误按照此参数为空或者等于0处理。
* 例子：
  * CreateTaskGroupPlanByTaskItem ("电器","400","维修规范","维修作业组","","","黄油周期",0,8,"true","发起人","发起作业组ID","发起作业项ID","发起业务范畴",”true”,”大修1”)

### CreateTaskGroupPlan

* 函数原型：
  * CreateTaskGroupPlan("tgPropertyName")
* 函数描述：
  * 创建作业组计划，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名，作业组属性值形如：
    {"TGName":"某某作业组","TGPlanName":"某某作业组","PlanStartTime":"2016-06-28 10:00:00","PlanEndTime":"2016-06-28 18:00:00","PlanType":"Plan","BelongOU":"监理一队","AddTaskJobs":[{"TSName":"验定规范","AssetID":" b7f719a3-7e9a-4d8b-9560-52f3640a39f4","TJName":"验定规范_泵1"}，{"TSName":"验定规范","AssetID":" b7f719a3-7e9a-4d8b-9560-52f3640a39f5","TJName":"验定规范_泵2"}]}
* 其中各字段的含义如下：
  * TGName：字符串类型，作业组模板名称。
  * TGPlanName：字符串类型，修改后的作业组名称。可选参数，默认为空，表示不修改。
  * PlanStartTime：字符串类型，作业组计划开始时间。
  * PlanEndTime：字符串类型，作业组计划结束时间。
  * PlanType：字符串类型，计划类型，为“Plan”或“Create”，分别表示计划或即时创建。
  * BelongOU：字符串类型，创建的作业组所属组织单元名。
  * 当要创建的作业组没有多个组织单元时，此参数无效。
  * 当要创建的作业组有多个组织单元时：
  * 当参数不填，如果当前作业组所在组织单元在列表中，以当前作业组所在组织单元创建；如果当前作业组所在组织单元不在列表中，以缺省所属组织单元创建。
  * 当填写参数，如果该参数在组织单元列表中，以该参数创建；如果该参数不在组织单元列表中，不创建。
  * AddTaskJobs：数组类型，表示要创建的作业任务。创建的作业组计划会自动添加这些作业任务。仅当“PlanType”为“Plan”是有效。
  * TSName：字符串类型，作业规范名称。
  * AssetID：字符串类型，资产ID。
  * TJName：字符串类型，表示要创建的作业任务的名称。可选参数，默认为“资产名_作业规范名”。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
* 在SDC中配置如下脚本：

```
var tgName = '电脑和办公桌检测（一队）';
var tgPropertyName = 'CreatePlanPara';
var assetID = @MyTask.Asset;
var assetName = @MyTask.Asset.DisplayName;
var tsName = '办公桌检查';

var paraObj = {};
var tgValue = ScriptEngine.Context.GetTaskGroupPropertyValue(tgPropertyName);
if (tgValue) {
	paraObj = JSON2.parse(tgValue)
}

paraObj['TGName'] = tgName;
paraObj['TGPlanName'] = tgName;

var now = new Date();
var startTime = now.getTime();
var endTime = now.getTime();
paraObj['PlanStartTime'] = Common.FormatDateTimeByFormat('yyyy-MM-dd', new Date(startTime)) + ' 00:00:00';
paraObj['PlanEndTime'] = Common.FormatDateTimeByFormat('yyyy-MM-dd', new Date(endTime)) + ' 23:59:59';

paraObj['PlanType'] = 'Plan';

var addTaskJobs = [];
if(paraObj['AddTaskJobs']) {
	addTaskJobs = paraObj['AddTaskJobs'];
}

var tjName = assetName + '_' + tsName;
var find = _.find(addTaskJobs, function (_obj) {
	return _obj['TJName'] == tjName
});
if(!find){
	var obj = {'TSName':tsName,'AssetID': assetID,'TJName':tjName};
	addTaskJobs.push(obj);
}

paraObj['AddTaskJobs'] = addTaskJobs;

var newTgValue = JSON2.stringify(paraObj);
ScriptEngine.Context.SetTaskGroupPropertyValue(tgPropertyName, newTgValue);

return true;
```

* 终端运行脚本后，tgPropertyName的值为:
  * {"TGName":"电脑和办公桌检测（一队）","TGPlanName":"电脑和办公桌检测（一队）","PlanStartTime":"2016-06-29 00:00:00","PlanEndTime":"2016-06-29 23:59:59","PlanType":"Plan","AddTaskJobs":[{"TSName":"办公桌检查","AssetID":"3d8d34a7-fe79-45b8-a8b1-508c10a3ff73","TJName":"ZB办公桌_办公桌检查"},{"TSName":"办公桌检查","AssetID":"50d73990-0f93-4876-88df-f5d67080eec0","TJName":"HZB办公桌_办公桌检查"}]}
* CreateTaskGroupPlan("CreatePlanPara");：流程中调用此函数，自动创建作业任务和作业组计划，同时此计划中添加了作业任务。

### CreateMutilTaskGroupPlan

* 函数原型：
  * CreateMutilTaskGroupPlan("tgPropertyName")
* 函数描述：
  * 创建多个作业组计划，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * 与CreateTaskGroupPlan函数类似，只是tgPropertyName的值变为上述结构的一个数组。

### UpdatePlanTime

* 函数原型：
  * UpdatePlanTime("startTimePropertyName",”endTimePropertyName”)
* 函数描述：
  * 更新作业组的计划时间，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * startTimePropertyName：字符串类型，作业组属性名。
  * endTimePropertyName：字符串类型，作业组属性名。
* 注意：
  * 作业组属性名参数不验证正确与否。参数可以只写一个，必须为开始时间，写两个时若有一个为空，则不为空的字符串起作用。
* 例子：
  * UpdatePlanTime("开始时间属性",”结束时间属性”)

### UpdateTaskGroupPropertyFromAssetProperty

* 函数原型：
  * UpdateTaskGroupPropertyFromAssetProperty (“assetPropertyName”,“tgPropertyName”)
* 函数描述：
  * 把作业组最后一个顶层作业对应资产的指定资产属性更新到指定作业组属性，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * assetPropertyName：字符串类型，资产属性名。
  * tgPropertyName：字符串类型，作业组属性名。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * UpdateTaskGroupPropertyFromAssetProperty("备注","属性1")

### UpdateTaskGroupPropertyJsonFromTaskName

* 函数原型：
  * UpdateTaskGroupPropertyJsonFromTaskName (“tgPropertyName”)
* 函数描述：
  * 把作业组最后一个顶层作业名解析后更新到类型为Json字符串的指定作业组属性，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * UpdateTaskGroupPropertyJsonFromTaskName("消去例外")

### UpdateTaskGroupPropertyFromTaskName

* 函数原型：
  * UpdateTaskGroupPropertyFromTaskName (“tgPropertyName”)
* 函数描述：
  * 把作业组最后一个顶层作业名解析后更新到指定作业组属性，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * UpdateTaskGroupPropertyFromTaskName("例外")

### UpdateTaskGroupPropertyFromConstString

* 函数原型：
  * UpdateTaskGroupPropertyFromConstString (“tgPropertyName”,” constString”)
* 函数描述：
  * 把常量字符串更新到指定作业组属性，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名。
  * constString：字符串类型，常量字符串。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * UpdateTaskGroupPropertyFromConstString("属性2","这是一个字符串")

### UpdateTaskGroupPropertyFromBelongOU

* 函数原型：
  * UpdateTaskGroupPropertyFromConstString (“tgPropertyName”)
* 函数描述：
  * 把作业组的组织单元更新到指定作业组属性，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * UpdateTaskGroupPropertyFromBelongOU ("属性2")

### UpdateBelongOUFromTaskGroupProperty

* 函数原型：
  * UpdateBelongOUFromTaskGroupProperty (“tgPropertyName”)
* 函数描述：
  * 把指定作业组属性的值更新到作业组的组织单元，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * UpdateBelongOUFromTaskGroupProperty("属性2")

### UpdateTaskGroupPropertyFromActivityUserInfo

* 函数原型：
  * UpdateTaskGroupPropertyFromActivityUserInfo (“tgPropertyName”,” aeName”,” infoType”)
* 函数描述：
  * 把指定活动的执行者信息更新到指定作业组属性，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名。
  * aeName：字符串类型，活动实例名。
  * infoType：字符串类型，信息类型，可以为“UserID”或“UserName”或“LoginID”或“OrgUnitID”或“OrgUnitName”或“PostID”或“PostName”或“ShiftID”或“ShiftName”
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * UpdateTaskGroupPropertyFromActivityUserInfo("用户ID","创建","UserID")
  * UpdateTaskGroupPropertyFromActivityUserInfo("用户名","创建","UserName")
  * UpdateTaskGroupPropertyFromActivityUserInfo("登录名","创建","LoginID")
  * UpdateTaskGroupPropertyFromActivityUserInfo("组织单元ID","创建","OrgUnitID")
  * UpdateTaskGroupPropertyFromActivityUserInfo("组织单元名","创建","OrgUnitName")
  * UpdateTaskGroupPropertyFromActivityUserInfo("岗位ID","创建","PostID")
  * UpdateTaskGroupPropertyFromActivityUserInfo("岗位名","创建","PostName")
  * UpdateTaskGroupPropertyFromActivityUserInfo("班次ID","创建","ShiftID")
  * UpdateTaskGroupPropertyFromActivityUserInfo("班次名","创建","ShiftName")

### UpdateTaskGroupPropertyBasePlanStartTime

* 函数原型：
  * UpdateTaskGroupPropertyBasePlanStartTime (“startTime”,”endTime”,“tgPropertyName”,” valueString”)
* 函数描述：
  * 如果作业组计划开始时间在指定的区域内，则修改作业组指定的属性的值，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * startTime：字符串类型，开始时间
  * endTime：字符串类型，结束时间
  * tgPropertyName：字符串类型，作业组属性名
  * valueString：字符串类型，作业组属性值
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * UpdateTaskGroupPropertyBasePlanStartTime("08:00:00","15:00:00","班次类型","早班")

### UpdateTaskGroupDescByTaskGroupProperty

* 函数原型：
  * UpdateTaskGroupDescByTaskGroupProperty
    (“tgPropertyName”,"tgPropertyValue",”updateString”,"updateType")
* 函数描述：
  * 如果作业组指定属性值为指定值，则修改作业组描述，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名
  * tgPropertyValue：字符串类型，作业组属性值
  * updateString：字符串类型，描述的更新值
  * updateType：字符串类型，更新类型，为”Update”或”Add”，其中”Update”表示更新，”Add”表示增加。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * UpdateTaskGroupDescByTaskGroupProperty("动火证","是","动火证；","add");
  * UpdateTaskGroupDescByTaskGroupProperty("登高证","是","登高证；","add");

### InvokeService

* 函数原型：
  * InvokeService (“url”,"type",”userData”")
* 函数描述：
  * 函数用于访问Restful服务，从而达到通知作业组活动状态变化的目的。调用服务时会提供作业组ID、作业组名称和用户数据三个参数，参数名分别为：tgID、tgName和userData。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * url：字符串类型，RestFul服务端Url
  * type：字符串类型，数据传输类型，支持”Get”,”Post”,”Put”
  * userData：字符串类型，用户可以自己带一个参数
* 注意：无。
* 例子：
  * InvokeService('http://localhost:8000/DemoService/PostTaskGroupStatus','Post','data');
  * Restful服务会收到以下数据：
    {"tgID":"1BA9A2E2-6537-4866-8759-B1B01CF7F561","tgName":"安全检查作业组","userData":"data"}

### BatchModifySameNameActivityActor

* 函数原型：
  * BatchModifySameNameActivityActor(“_activityEntityName”,”_taskGroupPropertyName”,”_updateType”)
* 函数描述：
  * 批量修改业务流程中指定活动实例参与者人员，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * _activityEntityName：字符串类型，活动实例名。
  * _taskGroupPropertyName：字符串类型，作业组属性名，作业组属性类型可以为字符串、列表、可输入列表或多选列表，作业组属性的值（如果为列表，则为对应的显示值）即为指定的参与者人员的登录名或用户名。作业组属性的值可以包含多个人员，人员之间用逗号分隔。
  * _updateType：字符串类型，更新类型，为”Update”或”Add”，其中”Update”表示更新，会删除以前的参与者人员和参与者角色，”Add”表示增加，以前的参与者人员和参与者角色仍然有效。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * BatchModifySameNameActivityActor("设备维护员执行","设备维护员执行人","Update")
  * BatchModifySameNameActivityActor("设备维护员执行","设备维护员执行人","Add")

### OpertingAsset

* 函数原型：
  * OpertingAsset("move",'_taskGroupPropertyName_assetname','_taskGroupPropertyName_Newfathername')
* 函数描述：
  * 将资产树上的某个资产转移到其他资产下，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * move：字符串类型，操作类型。
  * _taskGroupPropertyName_assetname：字符串类型，作业组属性名，作业组属性类型为字符串，作业组属性的值即为要移动的资产全路径名称。
  * _taskGroupPropertyName_Newfathername：字符串类型，作业组属性名，作业组属性类型为字符串，作业组属性的值即为移动后的父亲节点资产全路径名称。
* 注意：
  * 作业组属性名参数不验证正确与否。操作类型当前只支持移动，如果旧的父亲节点和新的父亲节点相同，则不支持。
* 例子：
  * OpertingAsset("move",'资产名','新父亲资产')

### UpdateActivityPeriod2TaskGroupProperty

* 函数原型：
  * UpdateActivityPeriod2TaskGroupProperty("aeName","tgPropertyName","actionType")
* 函数描述：
  * 把指定活动实例结束时间与活动实例创建时间的差添加或者更新到指定作业组属性，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * aeName：字符串类型，活动实例名称。
  * tgPropertyName：字符串类型，作业组属性名。
  * actionType: 字符串类型，操作类型。如果是add 则把时间差加到作业组属性上，如果是update则更新时间差到作业组属性。（只要不是add 则为更新）
* 例子：
  * UpdateActivityPeriod2TaskGroupProperty('运行调度长上报审核','运行调度审核耗时','add')

### UpdatePeriodOfActivityToCurActivity2TaskGroupProperty

* 函数原型：
  * UpdatePeriodOfActivityToCurActivity2TaskGroupProperty("aeName","tgPropertyName","actionType")
* 函数描述：
  * 把当前活动实例结束时间与指定活动实例创建时间的差添加或者更新到指定作业组属性，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * aeName：字符串类型，活动实例名称。
  * tgPropertyName：字符串类型，作业组属性名。
  * actionType: 字符串类型，操作类型。如果是add 则把时间差加到作业组属性上，如果是update则更新时间差到作业组属性。（只要不是add 则为更新）
* 例子：
  * UpdatePeriodOfActivityToCurActivity2TaskGroupProperty('运行调度长上报审核','运行调度审核耗时','add’)

### UpdateActivityOutTime

* 函数原型：
  * UpdateActivityOutTime(“_activityEntityName”,”_taskGroupPropertyName”)
* 函数描述：
  * 修改业务流程中指定活动实例（执行或者审核）的自身属性超时，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * _activityEntityName：字符串类型，活动实例名。
  * _taskGroupPropertyName：字符串类型，作业组属性名，作业组属性类型可以为时间，作业组属性的值减去当前时间的分数值设置为活动实例的超时值。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * UpdateActivityOutTime("审核2","审核最后时间")

### CompareTwoTaskGroupProperty

* 函数原型：
  * CompareTwoTaskGroupProperty (“firstNumber”,” secondNumber”,” resultValue”)
* 函数描述：
  * 比较两个作业组属性的判断，同时把判断结果赋值给第三个作业组属性，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * firstNumber：字符串类型，第一个作业组属性的名称。
  * secondNumber：字符串类型，第二个作业组属性的名称。
  * resultValue：字符串类型，赋到第三个作业组属性的名称
* 注意：
  * 第一个比第二个大，则结果为1，否则为0。
* 例子：
  * CompareTwoTaskGroupProperty ("数量1","数量2",”结果”)

### CalculationExpression

* 函数原型：
  * CalculationExpression(“expression”,”resultPropertyName”)
* 函数描述：
  * 替换第一个参数expression中属性的值，计算该表达式的值保存于第二个属性resultPropertyName，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * expression：字符串类型，计算的表达式，支持四则运算以及简单的SQL语句计算，使用${propertyName}来做替换符，使用属性propertyName的值替换后得到表达式。
  * _taskGroupPropertyName：字符串类型，作业组属性名，作业组属性类型可以为字符串，数值，保存第一个参数表达式后结果。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * CalculationExpression(“${属性1}+${属性2}”,”结果属性”)
  * CalculationExpression(DATEDIFF( Day, '${本周末}', '${本周初}'),周几);

### UpdateTaskGroupNameDesc

* 函数原型：
  * UpdateTaskGroupNameDesc(tgPropertyName,operation_Name,tgPropertyDesc,operation_desc,isUpdatePlan)
* 函数描述：
  * 更新作业组（计划）名称与描述。
  * 修改作业组（计划）的名称与描述，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名。按照operation_Name规则修改作业组（计划）的名称。
  * operation_Name为字符串，是第一个参数的修改类型。缺省值为replace，prefix表示属性值作为前缀添加到作业组（计划）名称，suffix表示作为后缀添加到作业组（计划）名称，replace（字符串错误也是按照replace）表示替换作业组（计划）名称。。
  * tgPropertyDesc 字符串类型，作业组属性名。按照operation_desc修改作业组（计划）的描述，可缺省（缺省为不修改描述）
  * operation_desc 字符串，是第三个参数的修改类型（同理第二个参数），缺省值为replace
  * isUpdatePlan bool类型，是否同时修改计划的名称与描述，默认值为true
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * UpdateTaskGroupNameDesc(新作业组前缀,'prefix',描述后缀,suffix,false)

### ExecuteProcessScript

* 函数原型：
  * ExecuteProcessScript(tgPropertyName)
* 函数描述：
  * 执行作业组属性的流程后脚本。
  * 执行作业组属性的流程后脚本，可以在业务流程的初始活动、业务活动和条件逻辑活动完成事件后中调用。同一事件可以多次调用此函数，函数之间用分号隔开。
* 参数说明：
  * tgPropertyName：字符串类型，作业组属性名。执行该作业组属性的流程后脚本执行。
* 注意：
  * 作业组属性名参数不验证正确与否。
* 例子：
  * ExecuteProcessScript(脚本属性)
